--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Awesome digital assets handler",
   "scripts": {
-    "start": "ts-node src/main.ts",
+    "start": "ts-node src/index.ts",
     "watch": "tsc -p tsconfig.json -w",
     "build": "tsc -p tsconfig.json",
     "lint": "eslint . --ext .ts",
@@ -18,6 +18,7 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "@types/node": "^18.11.9",
+    "eslint": "^8.28.0",
     "husky": "^7.0.4",
     "sinon": "^7.1.1",
     "ts-node": "^4.1.0",
@@ -26,6 +27,7 @@
   },
   "dependencies": {
     "analytics-node": "^6.0.0",
+    "arg": "^5.0.2",
     "chalk": "^4.1.2",
     "chokidar": "^3.5.3",
     "uuid": "^8.3.2"
