--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   ],
   "license": "Apache-2.0",
   "devDependencies": {
+    "@types/lodash": "^4.14.189",
     "@types/node": "^18.11.9",
     "eslint": "^8.28.0",
     "husky": "^7.0.4",
@@ -30,6 +31,8 @@
     "arg": "^5.0.2",
     "chalk": "^4.1.2",
     "chokidar": "^3.5.3",
+    "csv-parse": "^5.3.2",
+    "lodash": "^4.17.21",
     "uuid": "^8.3.2"
   },
   "engines": {
