--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "arg": "^5.0.2",
     "chalk": "^4.1.2",
     "chokidar": "^3.5.3",
+    "coingecko-api": "^1.0.10",
     "csv-parse": "^5.3.2",
     "lodash": "^4.17.21",
     "uuid": "^8.3.2"
